--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "antd": "^4.16.13",
-    "sass": "^1.43.2",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.0",
-    "redux": "^4.1.2",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
+    "sass": "^1.43.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
