完成动态路由表相关逻辑

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-antd-template",
+  "name": "react-antd-template",
   "version": "1.0.0",
   "author": "chq",
   "scripts": {
@@ -15,12 +15,12 @@
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "redux": "^4.1.2",
-    "sass": "^1.43.2"
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "sass": "^1.43.2"
   },
   "engines": {
     "node": ">= 12.0.0",
